# OpenGL3dRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: Camera.h  chunk.cpp  chunk.h  common.h  cube_mesh.cpp  cube_mesh.h  game_map.h  main.cpp
src/shaders/: fragment.frag  vertex.vert
src/util/: ResourceManager.cpp  mesh.cpp  mesh.h  shader.h  texture.cpp  vertex.h
src/util/primitives/: cube.cpp  cube.h  primitive.cpp  primitive.h  pyramid.h
